--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,6 +8,6 @@
 <!--    session 값 확인: <p th:text="${session.loginEmail}"></p>-->
 <!--    <a href="/tset/list">세션리스트</a>-->
     <a href="/test/logout">로그아웃</a>
-    <a href="/test/test">테스트페이지</a>
+    <a href="/test/test">테스트페이지</a>테스트
 </body>
 </html>
