--- a/src/main/resources/templates/menuList.html
+++ b/src/main/resources/templates/menuList.html
@@ -189,99 +189,99 @@
 		<div class="head_wrap">
 			<div class="head">
 				<div class="head_logo">
-					<a href="main.html">
-						<img src="/image/logo.png" class="head_logo_img_fixed">
+					<a href="/">
+						<img src="image/logo.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
 				<div class="icon_basket">
 					<a href="#">
-						<img src="/image/basket.png" class="icon_basket_img_fixed">
+						<img src="image/basket.png" class="icon_basket_img_fixed">
 					</a>
 				</div>
 
 				<div class="icon_search">
 					<a href="#">
-						<img src="/image/search.png" class="icon_search_img_fixed">
+						<img src="image/search.png" class="icon_search_img_fixed">
 					</a>
 				</div>
 
 				<div class="head_top_nav">
 					<nav class="head-menu-top-nav">
-						<ul>     
-							<li class="top-nav01"><a href="http://localhost:8080/CafeWeb/%EB%A1%9C%EA%B7%B8%EC%9D%B8/%EB%A1%9C%EA%B7%B8%EC%9D%B8.html">Sign In</a></li>
-							<li class="top-nav02"><a href="http://localhost:8080/CafeWeb/%ED%9A%8C%EC%9B%90%EA%B0%80%EC%9E%85%20%EC%95%BD%EA%B4%80%EB%8F%99%EC%9D%98/register.html">Join Now</a></li>
+						<ul>
+							<li class="top-nav01"><a href="/test/login">Sign In</a></li>
+							<li class="top-nav02"><a href="/register">Join Now</a></li>
 							<li class="top-nav03"><a href="#">My Page</a></li>
-						 </ul>
-					 </nav>
+						</ul>
+					</nav>
 				</div>
-				
+
 				<div class="head_menu_wrap">
 					<div class="head_menu">
 						<ul>
 							<li>
-								<a href="http://localhost:8080/CafeWeb/%EB%B8%8C%EB%9E%9C%EB%93%9C/brand.html" class="pc">ABOUT US</a>
+								<a href="/brand" class="pc">ABOUT US</a>
 								<a class="m head_menu_down">ABOUT US</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="http://localhost:8080/CafeWeb/%EB%B8%8C%EB%9E%9C%EB%93%9C/brand.html">브랜드</a>
-											</li>
-										</ul>
-									</div>
-							</li>
-
-							<li>
-								<a href="http://localhost:8080/CafeWeb/%EB%A9%94%EB%89%B4/menu(%EC%9D%8C%EB%A3%8C).html" class="pc">MENU</a>
-								<a class="m head_menu_down">MENU</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="http://localhost:8080/CafeWeb/%EB%A9%94%EB%89%B4/menu(%EC%9D%8C%EB%A3%8C).html">음료</a><br>
-											</li>
-											<li>
-												<a href="http://localhost:8080/CafeWeb/%EB%A9%94%EB%89%B4/menu(%ED%91%B8%EB%93%9C).html">푸드</a><br>
-											</li>
-										</ul>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/brand">브랜드</a>
+										</li>
+									</ul>
 								</div>
 							</li>
 
 							<li>
-								<a href="http://localhost:8080/CafeWeb/%EB%A7%A4%EC%9E%A5%EC%B0%BE%EA%B8%B0/%EB%A7%A4%EC%9E%A5%EC%B0%BE%EA%B8%B0.html" class="pc">STORE</a>
+								<a href="/menu" class="pc">MENU</a>
+								<a class="m head_menu_down">MENU</a>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/menu">음료</a><br>
+										</li>
+										<li>
+											<a href="/menu">푸드</a><br>
+										</li>
+									</ul>
+								</div>
+							</li>
+
+							<li>
+								<a href="/store" class="pc">STORE</a>
 								<a class="m head_menu_down">STORE</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="http://localhost:8080/CafeWeb/%EB%A7%A4%EC%9E%A5%EC%B0%BE%EA%B8%B0/%EB%A7%A4%EC%9E%A5%EC%B0%BE%EA%B8%B0.html">매장찾기</a>
-											</li>
-										</ul>
-									</div>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/store">매장찾기</a>
+										</li>
+									</ul>
+								</div>
 							</li>
 
 							<li>
-								<a href="http://localhost:8080/CafeWeb/%EC%9E%85%EC%A0%90%EB%AC%B8%EC%9D%98/%EC%9E%85%EC%A0%90%EB%AC%B8%EC%9D%98.html" class="pc">PARTNERSHIP</a>
+								<a href="/partnership" class="pc">PARTNERSHIP</a>
 								<a class="m head_menu_down">PARTNERSHIP	</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="http://localhost:8080/CafeWeb/%EC%9E%85%EC%A0%90%EB%AC%B8%EC%9D%98/%EC%9E%85%EC%A0%90%EB%AC%B8%EC%9D%98.html">입점문의</a>
-											</li>
-										</ul>
-									</div>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/partnership">입점문의</a>
+										</li>
+									</ul>
+								</div>
 							</li>
 
 							<li>
-								<a href="http://localhost:8080/CafeWeb/%EA%B3%B5%EC%A7%80%EC%82%AC%ED%95%AD,Q&A/%EA%B3%B5%EC%A7%80%EC%82%AC%ED%95%AD.html" class="pc">NEWS</a>
+								<a href="/board/QnA" class="pc">NEWS</a>
 								<a class="m head_menu_down">NEWS</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="http://localhost:8080/CafeWeb/%EA%B3%B5%EC%A7%80%EC%82%AC%ED%95%AD,Q&A/%EA%B3%B5%EC%A7%80%EC%82%AC%ED%95%AD.html">공지사항</a><br>
-											</li>
-											<li>
-												<a href="http://localhost:8080/CafeWeb/%EA%B3%B5%EC%A7%80%EC%82%AC%ED%95%AD,Q&A/Q&A.html">Q&A</a><br>
-											</li>
-										</ul>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/board/QnA">공지사항</a><br>
+										</li>
+										<li>
+											<a href="/board/QnA">Q&A</a><br>
+										</li>
+									</ul>
 								</div>
 							</li>
 						</ul>
