--- a/src/main/resources/static/css/NewFile1.css
+++ b/src/main/resources/static/css/NewFile1.css
@@ -251,13 +251,13 @@ main {
 }
 
 .login-input-section-wrap{
-   padding-top: 240px;
+   padding-top: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
-    justify-content: center;
-    width: 500px;
-    margin: 0 auto;
+   justify-content: center;
+   width: 500px;
+   margin: 0 auto;
 }
 
 .login-input-wrap{
@@ -288,6 +288,7 @@ main {
    width: 465px;
    height: 48px;
    font-size: 18px;
+   font-weight: bold;
    background: var(--naver-green-color);
    color: #8F6666;
    border: solid 1px var(--naver-green-border-color);
@@ -317,7 +318,8 @@ main {
    display: flex;
    flex-direction: column;
    align-items: center;
-    justify-content: center;
+   justify-content: center;
+   padding-bottom: 90px;
 }
 .Easy-sgin-in-wrap h2{
    font-size: 20px;
@@ -369,79 +371,4 @@ html, body {
 }
 
 section {
-  padding-bottom: 60px;
-}
-
-footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-  width: 100%;
-  height: 200px;
-  font-size: 17px;
-  background-color: #333;
-}
-
-footer .foot-wrap .foot-cont-wrap{
-   background-color: #333;
-   text-align: top;
-   margin-top: -24px;
-   color: #fff;
-}
-
-footer .foot-wrap .foot-cont-wrap .foot-logo{
-   display: inline-block;
-   padding-left: 60px;
-   padding-top: 1em;
-   font-size: 1.3em;
-   background-color: #333;
-   color: #000000;
-   vertical-align: top;
-}
-
-footer .foot-wrap .foot-cont-wrap .foot-logo h2{
-   display: block;
-    font-size: 1.3em;
-    margin-block-start: 0.7em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
-
-footer .foot-menu-wrap .foot-menu-nav {
-   color: #000000;
-  padding-top: 14px;
-    display: flex;
-   background-color: #FFDADA;
-}
-
-footer .foot-wrap .foot .foot-cont-wrap .foot-cont-text {
-   display: flex;
-   background-color: #333;
-   padding-left: 150px;
-   height: 50px;   
-   color: #fff;
-
-}
-
-footer a {
-  display: inline-block;
-  margin: 0 20px 10px 20px;
-  color: #000000; font-size: 16px;
-  background-color: #FFDADA;
-}
-
-footer a:visited {
-  color: #000000;
-  background-color: #FFDADA;
-}
-
-footer p {
-  margin-top: 0; margin-bottom: 0;
-}
-
-footer p span {
-  display: inline-block;
-  margin-left: 20px;
-}
+  padding-bottom: 60px;}
