--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
     <body>
         <!-- header -->
         <div id="header">
-            <a href="http://localhost:8080/CafeWeb/main(iframe).html#" target="_blank" title="회원가입 페이지 보러가기"><img src="/image/logo.png" id="logo"></a>
+            <a href="/" target="_blank" title="회원가입 페이지 보러가기"><img src="/image/logo.png" id="logo"></a>
         </div>
 
 
@@ -17,11 +17,8 @@
         <div id="wrapper">
 
             <!-- content-->
-
-
             <div id="content">
                 <form action="/test/save" method="post">
-
                 <!-- ID -->
 <!--                <div>-->
 <!--                    <h3 class="join_title">-->
@@ -33,8 +30,6 @@
 <!--                    <span class="error_next_box"></span>-->
 <!--                </div>-->
 
-                <!-- PW1 -->
-
                     <!-- EMAIL -->
                     <div>
                         <h3 class="join_title"><label for="email">본인확인 이메일<span class="optional">(선택)</span></label></h3>
@@ -44,7 +39,7 @@
                         <span class="error_next_box">이메일 주소를 다시 확인해주세요.</span>
                     </div>
 
-
+                <!-- PW1 -->
                 <div>
                     <h3 class="join_title"><label for="pswd1">비밀번호</label></h3>
                     <span class="box int_pass">
@@ -60,7 +55,7 @@
 <!--                    <h3 class="join_title"><label for="pswd2">비밀번호 재확인</label></h3>-->
 <!--                    <span class="box int_pass_check">-->
 <!--                        <input type="text" id="pswd2" class="int" maxlength="20">-->
-<!--                        <img src="image/m_icon_check_disable.png" id="pswd2_img1" class="pswdImg">-->
+<!--                        <img src="/image/m_icon_check_disable.png" id="pswd2_img1" class="pswdImg">-->
 <!--                    </span>-->
 <!--                    <span class="error_next_box"></span>-->
 <!--                </div>-->
@@ -69,7 +64,7 @@
                 <div>
                     <h3 class="join_title"><label for="name">이름</label></h3>
                     <span class="box int_name">
-                        <input type="text" id="name" name="memberName"class="int" maxlength="20">
+                        <input type="text" id="name" name="memberName" class="int" maxlength="20">
                     </span>
                     <span class="error_next_box"></span>
                 </div>
@@ -105,7 +100,7 @@
                     </button>
                 </div>
                     <input type="submit" value="회원가입">
-            </form>
+                </form>
            
 				<div class="member-footer">
             		<div>
