컨트롤러분리 / 회원,게시글 db테이블설계 변경 / 공지db 추가(서비스구현 아직)

--- a/src/main/resources/templates/brand.html
+++ b/src/main/resources/templates/brand.html
@@ -186,7 +186,8 @@
 		</div>
 	</div>
 	<div class="wrap">
-		<div class="head_wrap">
+<!--		여기부터-->
+		<div class="head_wrap"> 
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
