컨트롤러분리 / 회원,게시글 db테이블설계 변경 / 공지db 추가(서비스구현 아직) 테스트완

--- a/src/main/resources/templates/Q&A_write.html
+++ b/src/main/resources/templates/Q&A_write.html
@@ -18,7 +18,7 @@
 								</a>
 							</div>
 						</div>
-						<form name="submit_form" id="submit_form" method="post">
+						<form name="submit_form" id="submit_form" method="post" action="/text">
 							<input type="hidden" name="customer_category" id="customer_category" value="2">
 							<input type="hidden" name="customer_tbl_area1_erp" id="customer_tbl_area1_erp" value="">
 							<input type="hidden" name="customer_tbl_area2_erp" id="customer_tbl_area2_erp" value="">
@@ -121,7 +121,7 @@
 													<td>
 														<div class="input_text_wrap input_wrap2">
 															<label>
-																<input type="text" name="customer_tbl_title" id="customer_tbl_title" required="required">
+																<input type="text" name="boardTitle" id="customer_tbl_title" required="required">
 															</label>	
 														</div>
 													</td>
@@ -134,7 +134,7 @@
 													<div class="cont_text">
 														<div class="input_textarea_wrap">
 															<label>
-																<textarea name="customer_tbl_content" id="customer_tbl_content" class="count_input"></textarea>
+																<textarea name="boardContents" id="customer_tbl_content" class="count_input"></textarea>
 															</label>
 														</div>
 														<div class="input_text_info cont_text_info input_limit_byte">
@@ -150,10 +150,11 @@
 
 								<div class="cont_text">
 									<div class="input_btn_wrap input_wrap2">
-										<input type="button" value="등록하기" class="btn btn1 btn_ani" id="submit">
+										<input type="submit" value="등록하기" class="btn btn1 btn_ani" id="submit">
 									</div>
+									<input type="submit" value="작성">
 								</div>
-							</div>
+
 						</form>
 					</div>
 				</div>
