--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -105,11 +105,10 @@
 
                 <!-- JOIN BTN-->
                 <div class="btn_area">
-                    <button type="button" id="btnJoin">
+                    <button type="submit" id="btnJoin">
                         <span>가입하기</span>
                     </button>
                 </div>
-                    <input type="submit" value="회원가입">
                 </form>
            
 				<div class="member-footer">
