--- a/src/main/resources/templates/menuList.html
+++ b/src/main/resources/templates/menuList.html
@@ -190,19 +190,19 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/logo.png" class="head_logo_img_fixed">
+						<img src="/image/logo.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
 				<div class="icon_basket">
 					<a href="#">
-						<img src="image/basket.png" class="icon_basket_img_fixed">
+						<img src="/image/basket.png" class="icon_basket_img_fixed">
 					</a>
 				</div>
 
 				<div class="icon_search">
 					<a href="#">
-						<img src="image/search.png" class="icon_search_img_fixed">
+						<img src="/image/search.png" class="icon_search_img_fixed">
 					</a>
 				</div>
 
