--- a/src/main/resources/templates/Q&A_write.html
+++ b/src/main/resources/templates/Q&A_write.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http:/www.thymeleaf.org" >
 <head>
 <link rel="stylesheet" href="/css/news.css">
+<link rel="stylesheet" href="/css/style1.css">
 	<title>글쓰기</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -36,8 +37,8 @@
 	<meta property="al:android:app_name" content="App Links">
 	<meta property="al:android:package" content="org.applinks">
 	<meta property="al:web:url" content="http://applinks.org/documentation">
-	
-	<link rel="stylesheet" href="/css/header.css">
+
+	<link rel="stylesheet" href="header.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="/js/header.js"></script>
 	
