local에서 실행용 코드 추가 메뉴 타입별 스플릿 구현

--- a/src/main/resources/templates/menuRegister.html
+++ b/src/main/resources/templates/menuRegister.html
@@ -32,9 +32,9 @@
         <p>메뉴명<input name="menuName" type="text"></p>
         <p>가격<input name="menuPrice" type="number" ></p>
 
-        <label><input name="menuType" type="radio" value="coffee" checked>커피</label>
-        <label><input name="menuType" type="radio" value="non-coffee">논커피</label>
-        <label><input name="menuType" type="radio" value="desert">디저트</label><br>
+        <label><input name="menuType" type="radio" value="1" checked>커피</label>
+        <label><input name="menuType" type="radio" value="2">논커피</label>
+        <label><input name="menuType" type="radio" value="3">디저트</label><br>
         <input name="file" type="file"><br>
         <button type="submit">작성</button>
     </form>
