--- a/src/main/resources/templates/Q&A.html
+++ b/src/main/resources/templates/Q&A.html
@@ -288,7 +288,7 @@
 					<div class="mobile_menu_icon">
 						<div class="mobile_menu_icon_bar bar_black"></div>
 					</div>
-				</div>>	
+				</div>
 	<div class="cont_wrap menu_wrap">
 		<div class="cont">
 			<div class="cont_box cont_head">
