--- a/src/main/resources/templates/partnership_write.html
+++ b/src/main/resources/templates/partnership_write.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>입점접수</title>
-          <link href="/css/style.css" rel="stylesheet">
+          <link href="/css/partnership_write.css" rel="stylesheet">
           <link href="/css/all.css" rel="stylesheet">
 </head>
 <body>
