--- a/src/main/resources/templates/partnership_write.html
+++ b/src/main/resources/templates/partnership_write.html
@@ -497,7 +497,7 @@
 
 								<div class="cont_text">
 									<div class="input_btn_wrap input_wrap2">
-										<input type="button" value="등록하기" class="btn btn1 btn_ani" id="submit">
+										<input type="submit" value="등록하기" class="btn btn1 btn_ani" id="submit">
 									</div>
 								</div>
 							</div>
