--- a/src/main/resources/templates/Q&A_write.html
+++ b/src/main/resources/templates/Q&A_write.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http:/www.thymeleaf.org" >
 <head>
-<link rel="stylesheet" href="/css/news.css">
-<link rel="stylesheet" href="/css/style1.css">
+<link rel="stylesheet" href="/css/Q&A_write.css">
+<link rel="stylesheet" href="/css/all.css">
 	<title>글쓰기</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
