--- a/src/main/resources/templates/partnership_write.html
+++ b/src/main/resources/templates/partnership_write.html
@@ -195,13 +195,13 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/logo.png" class="head_logo_img_fixed">
+						<img src="/image/logo.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
 				<div class="icon_basket">
 					<a href="#">
-						<img src="image/basket.png" class="icon_basket_img_fixed">
+						<img src="/image/basket.png" class="icon_basket_img_fixed">
 					</a>
 				</div>
 
@@ -530,7 +530,7 @@
 									<ul>
 										<li>
 											<div class="foot_logo">
-												<img src="image/logo.png">
+												<img src="/image/logo.png">
 											</div>
 										</li>
 									</ul>
