메뉴장바구니 로그인시와 비로그인시 반응 구현

--- a/src/main/resources/templates/MyQ&A.html
+++ b/src/main/resources/templates/MyQ&A.html
@@ -367,7 +367,7 @@
 													<td>
 														<div class="text_wrap">
 															<div class="text">
-																<a href="/board/Q&A_write_modify.html">
+																<a href="/board/Q&A.html">
 																	<em>
 																		입점 접수는 어떻게 하나요?</em>
 																</a>
