--- a/src/main/resources/templates/menuRegister.html
+++ b/src/main/resources/templates/menuRegister.html
@@ -32,9 +32,11 @@
         <p>메뉴명<input name="menuName" type="text"></p>
         <p>가격<input name="menuPrice" type="number" ></p>
 
-        <label><input name="menuType" type="radio" value="1" checked>커피</label>
-        <label><input name="menuType" type="radio" value="2">논커피</label>
-        <label><input name="menuType" type="radio" value="3">디저트</label><br>
+        <label><input name="menuType" type="radio" value="1" checked>커피(ICE)</label>
+        <label><input name="menuType" type="radio" value="2">커피(HOT)</label>
+        <label><input name="menuType" type="radio" value="3">논커피(ICE)</label>
+        <label><input name="menuType" type="radio" value="4">논커피(HOT)</label>
+        <label><input name="menuType" type="radio" value="5">프라페 주스 병음료</label><br>
         <input name="file" type="file"><br>
         <button type="submit">작성</button>
     </form>
