--- a/src/main/resources/templates/MyOrder.html
+++ b/src/main/resources/templates/MyOrder.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="information.css">
 <link rel="stylesheet" href="information1.css">
 <link rel="stylesheet" href="information2.css">
-<link rel="stylesheet" href="information3.css">
+<link rel="stylesheet" href="style_util.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;600;700;900&display=swap">
