--- a/src/main/resources/templates/MyQ&A.html
+++ b/src/main/resources/templates/MyQ&A.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http:/www.thymeleaf.org" >
 <head>
 <link rel="stylesheet" href="/css/tests.css">
-<link rel="stylesheet" href="/css/style_utill.css">
+<link rel="stylesheet" href="/css/style_util.css">
 	<title>글쓰기</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
