--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,14 +18,14 @@
 
             <!-- content-->
             <div id="content">
-                <form action="/test/save" method="post">
+                <form action="/signup" method="post">
                 <!-- ID -->
                 <div>
                     <h3 class="join_title">
                         <label for="id">아이디</label>
                     </h3>
                     <span class="box int_id">
-                        <input type="text" id="id" name="memberID" class="int" maxlength="20">
+                        <input type="text" id="id" name="username" class="int" maxlength="20">
                     </span>
                     <span class="error_next_box"></span>
                 </div>
@@ -34,7 +34,7 @@
                 <div>
                     <h3 class="join_title"><label for="pswd1">비밀번호</label></h3>
                     <span class="box int_pass">
-                        <input type="text" id="pswd1" name="memberPassword" class="int" maxlength="20">
+                        <input type="text" id="pswd1" name="password" class="int" maxlength="20">
                         <span id="alertTxt">사용불가</span>
                         <img src="/image/m_icon_pass.png" id="pswd1_img1" class="pswdImg">
                     </span>
@@ -55,7 +55,7 @@
                     <div>
                         <h3 class="join_title"><label for="email">본인확인 이메일<span class="optional">(선택)</span></label></h3>
                         <span class="box int_email">
-                        <input type="text" id="email" name="memberEmail" class="int" maxlength="100" placeholder="선택입력">
+                        <input type="text" id="email" name="email" class="int" maxlength="100" placeholder="선택입력">
                     </span>
                         <span class="error_next_box">이메일 주소를 다시 확인해주세요.</span>
                     </div>
@@ -64,11 +64,11 @@
                 <div>
                     <h3 class="join_title"><label for="name">이름</label></h3>
                     <span class="box int_name">
-                        <input type="text" id="name" name="memberName" class="int" maxlength="20">
+                        <input type="text" id="name" name="name" class="int" maxlength="20">
                     </span>
                     <span class="error_next_box"></span>
                 </div>
-             
+
 
                 <!-- GENDER -->
 <!--                    <div class="field gender">-->
@@ -84,9 +84,9 @@
                 <div class="field gender">
             		<h3>성별</h3>
             			<div>
-                			<label><input type="radio" name="memberGender">남자</label>
-                			<label><input type="radio" name="memberGender">여자</label>
-                			<label><input type="radio" name="memberGender">선택안함</label>
+                			<label><input type="radio" name="gender" value="남자">남자</label>
+                			<label><input type="radio" name="gender" value="여자">여자</label>
+                			<label><input type="radio" name="gender" value="선택안함">선택안함</label>
             			</div>
                     <span class="error_next_box">필수 정보입니다.</span>
                 </div>
@@ -95,9 +95,9 @@
 
                 <!-- MOBILE -->
                 <div>
-                    <h3 class="join_title"><label for="phoneNo">휴대전화</label></h3>
+                    <h3 class="join_title"><label for="mobile">휴대전화</label></h3>
                     <span class="box int_mobile">
-                        <input type="tel" id="mobile" name="memberPhone" class="int" maxlength="16" placeholder="전화번호 입력">
+                        <input type="tel" id="mobile" name="phone" class="int" maxlength="16" placeholder="전화번호 입력">
                     </span>
                     <span class="error_next_box"></span>
                 </div>
