기존 login파일들 삭제 헤더url수정필요

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -298,12 +298,12 @@
 					<b>LOGIN</b>
 				</div>
 			</div>
-					<form action="/test/login" method="post">
+					<form action="/signin" method="post">
 						<div class="login-input-wrap">
 							<input placeholder="ID" name="username" type="text"></input>
 						</div>
 						<div class="login-input-wrap password-wrap">
-							<input type="password" placeholder="PASSWORD" name="memberPassword"><br /></input>
+							<input type="password" placeholder="PASSWORD" name="password"><br /></input>
 						</div>
 						<div class="login-button-wrap">
 							<!--<button class="w-btn w-btn-indigo" type="submit">Sign in</button>-->
