--- a/src/main/resources/templates/registerr.html
+++ b/src/main/resources/templates/registerr.html
@@ -20,18 +20,18 @@
 
 
             <div id="content">
-                <form action="/test/save" method="post">
+                <form action="/sigup" method="post">
 
                 <!-- ID -->
-<!--                <div>-->
-<!--                    <h3 class="join_title">-->
-<!--                        <label for="id">아이디</label>-->
-<!--                    </h3>-->
-<!--                    <span class="box int_id">-->
-<!--                        <input type="text" id="id" class="int" maxlength="20">-->
-<!--                    </span>-->
-<!--                    <span class="error_next_box"></span>-->
-<!--                </div>-->
+                <div>
+                    <h3 class="join_title">
+                        <label for="username">아이디</label>
+                    </h3>
+                    <span class="box int_id">
+                        <input type="text" id="username" class="int" maxlength="20">
+                    </span>
+                    <span class="error_next_box"></span>
+                </div>
 
                 <!-- PW1 -->
 
@@ -39,7 +39,7 @@
                     <div>
                         <h3 class="join_title"><label for="email">본인확인 이메일<span class="optional">(선택)</span></label></h3>
                         <span class="box int_email">
-                        <input type="text" id="email" name="memberEmail" class="int" maxlength="100" placeholder="선택입력">
+                        <input type="text" id="email" name="email" class="int" maxlength="100" placeholder="선택입력">
                     </span>
                         <span class="error_next_box">이메일 주소를 다시 확인해주세요.</span>
                     </div>
@@ -48,22 +48,22 @@
                 <div>
                     <h3 class="join_title"><label for="pswd1">비밀번호</label></h3>
                     <span class="box int_pass">
-                        <input type="text" id="pswd1" name="memberPassword" class="int" maxlength="20">
+                        <input type="text" id="pswd1" name="password" class="int" maxlength="20">
                         <span id="alertTxt">사용불가</span>
                         <img src="/image/m_icon_pass.png" id="pswd1_img1" class="pswdImg">
                     </span>
                     <span class="error_next_box"></span>
                 </div>
 
-                <!-- PW2 -->
-<!--                <div>-->
-<!--                    <h3 class="join_title"><label for="pswd2">비밀번호 재확인</label></h3>-->
-<!--                    <span class="box int_pass_check">-->
-<!--                        <input type="text" id="pswd2" class="int" maxlength="20">-->
-<!--                        <img src="image/m_icon_check_disable.png" id="pswd2_img1" class="pswdImg">-->
-<!--                    </span>-->
-<!--                    <span class="error_next_box"></span>-->
-<!--                </div>-->
+                 PW2
+                <div>
+                    <h3 class="join_title"><label for="pswd2">비밀번호 재확인</label></h3>
+                    <span class="box int_pass_check">
+                        <input type="text" id="pswd2" class="int" maxlength="20">
+                        <img src="image/m_icon_check_disable.png" id="pswd2_img1" class="pswdImg">
+                    </span>
+                    <span class="error_next_box"></span>
+                </div>
 
                 <!-- NAME -->
                 <div>
@@ -75,27 +75,27 @@
                 </div>
              
 
-                <!-- GENDER -->
-<!--                <div class="field gender">-->
-<!--            		<h3>성별</h3>-->
-<!--            			<div>-->
-<!--                			<label><input type="radio" name="gender">남자</label>-->
-<!--                			<label><input type="radio" name="gender">여자</label>-->
-<!--                			<label><input type="radio" name="gender">선택안함</label>-->
-<!--            			</div>-->
-<!--                    <span class="error_next_box">필수 정보입니다.</span>-->
-<!--                </div>-->
+                <!--GENDER -->
+                <div class="field gender">
+            		<h3>성별</h3>
+            			<div>
+                			<label><input type="radio" name="gender">남자</label>
+                			<label><input type="radio" name="gender">여자</label>
+                			<label><input type="radio" name="gender">선택안함</label>
+            			</div>
+                    <span class="error_next_box">필수 정보입니다.</span>
+                </div>
 
 
 
                 <!-- MOBILE -->
-<!--                <div>-->
-<!--                    <h3 class="join_title"><label for="phoneNo">휴대전화</label></h3>-->
-<!--                    <span class="box int_mobile">-->
-<!--                        <input type="tel" id="mobile" class="int" maxlength="16" placeholder="전화번호 입력">-->
-<!--                    </span>-->
-<!--                    <span class="error_next_box"></span>    -->
-<!--                </div>-->
+                <div>
+                    <h3 class="join_title"><label for="phone">휴대전화</label></h3>
+                    <span class="box int_mobile">
+                        <input type="tel" id="phone" name="phone" class="int" maxlength="16" placeholder="전화번호 입력">
+                    </span>
+                    <span class="error_next_box"></span>
+                </div>
 
 
                 <!-- JOIN BTN-->
